--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pokedex App</string>
+    <string name="fetch_error">Could  not retrieve the pokemons information</string>
+    <string name="retry">Retry\n</string>
+    <string name="loading">Loading...</string>
 </resources>
